# rust_chat

./: .gitignore  Cargo.toml  README.md  build.rs  chat.rs  package-lock.json  package.json
protos/: chat.proto  chat.rs
src/: App.tsx  client.rs  main.rs  server.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/protos/: chat.rs
src-tauri/src/: client.rs  errors.rs  lib.rs  main.rs  server.rs  types.rs
src/components/screens/: ChatRoom.tsx  Home.tsx
src/models/: Chat.ts
