[package]
name = "rust_fund"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = {version = "1", features = ["full"]}
futures = "0.3.31"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
futures-util = "0.3.30"
chrono = "0.4.40"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"